# LAB_VP

./: CMakeLists.txt  main.cpp
menu/: CMenu.cpp
